--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
 {
-  "name": "My PWA Example",
-  "short_name": "PWAExample",
-  "start_url": "/?source=homescreen",
+  "name": "My App",
+  "short_name": "App",
+  "start_url": "/?utm_source=homescreen",
   "display": "standalone",
   "orientation": "portrait",
-  "scope": "/",
-  "background_color": "#ffffff",
-  "theme_color": "#3367D6",
   "icons": [
-    { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
-  ]
+    { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" }
+  ],
+  "background_color": "#ffffff",
+  "theme_color": "#3367D6"
 }
