--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "My App",
   "short_name": "App",
-  "start_url": "/?utm_source=homescreen",
+  "start_url": "/pwa/?utm_source=homescreen",
   "display": "standalone",
   "orientation": "portrait",
   "icons": [
-    { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "/pwa/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/pwa/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ],
   "background_color": "#ffffff",
   "theme_color": "#3367D6"
