--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,6 @@
   "start_url": "/pwa/?utm_source=homescreen",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#ffffff",
+  "background_color": "#ff0000",
   "theme_color": "#3367D6"
 }
