--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,20 @@
 {
-  "name": "My App",
-  "short_name": "App",
-  "start_url": "/pwa/?utm_source=homescreen",
+  "name": "My PWA",
+  "short_name": "MyApp",
+  "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait",
-  "background_color": "#ff0000",
-  "theme_color": "#3367D6"
+  "background_color": "#000000",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
