--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "MyApp",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#ff0000",
+  "background_color": "#aa0000",
+  "theme_color": "#cccccc",
   "icons": [
     {
       "src": "icons/icon-192.png",
